--- a/GiamKichSan/Blog.GiamKichSan/appsettings.json
+++ b/GiamKichSan/Blog.GiamKichSan/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BlogsDBConnection": "Server=giamkichsan.com;Database=gia28291_Blogs;user id=gia28291_Blogs;password=L@nThuH@i1;"
+    "BlogDBConnection": "Server=giamkichsan.com;Database=gia28291_Blog;user id=gia28291_Blog;password=L@nThuH@i1;"
   },
   "Logging": {
     "LogLevel": {
