--- a/GiamKichSan/API.GiamKichSan/appsettings.json
+++ b/GiamKichSan/API.GiamKichSan/appsettings.json
@@ -4,7 +4,7 @@
   },
   "FTPUpload": {
     "Server": "localhost",
-    "string": "duanvc",
+    "Username": "vcduan",
     "Password": "M@tKhauM0i1"
   },
   "Logging": {
